# wiki-spike

./: .env.example  .gitignore  COMPLETION_KR.md  P0_COST_CONTEXT_KR.md  P0_GOLDEN_LAYERP_KR.md  P0_LLM_SLICE_KR.md  P0_STAGE1_KR.md  README.md  ROUND6_FIXES_KR.md  ROUND7_FIXES_KR.md  ROUND9_P0_CONTRACTS_KR.md  architecture-boundaries.json  pyproject.toml
.github/: BRANCH_PROTECTION_REQUIRED_CHECKS.md  phase2-checkpoint-trust.json  phase3-g3-checkpoint-trust.json  phase4-g3-contract-pin.json  phase4-g4-checkpoint-trust.json  phase4-runtime-boundaries.json
bootstrap/: p3-00.patch.gz.b64  p3-10.patch.xz.b64  p4-00.ready  p5.ready
scripts/: build_g3_checkpoint.py  build_phase2_checkpoint.py  check_architecture_boundaries.py  check_runtime_boundaries.py  p3_10_recovery_dry_run.py  p3_12_conformance.py  package_smoke.py  preflight_common.py  run_canary.py  run_p3_00_preflight.sh  run_p3_12_gate.sh  run_p4_00_preflight.sh  run_p4_14_gate.sh  scan_secrets.py  validate_p3_00_artifacts.py  verify_g3_checkpoint.py  verify_g4_checkpoint.py  verify_phase2_checkpoint.py  verify_phase3_contract_pin.py  write_p3_00_evidence.py  write_p4_00_evidence.py
tests/: test_canonical.py  test_cas.py  test_core.py  test_generation.py  test_ingest_m1a.py  test_integration_cli.py  test_llm_p0.py  test_p0_cost_context.py  test_p0_layerp.py  test_p0_stage1.py  test_publish_core.py  test_round6_fixes.py  test_round7.py  test_round8_snapshot.py  test_round9_p0_contracts.py  test_router_client.py  test_sub07.py
tmp/: p3-11-export-marker.txt  p3-11-export-readme.md  source-archive-url.txt
(+258 files in other folders)
